--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-ecommerce",
+  "name": "fsixshop",
   "version": "1.0.0",
   "main": "server.js",
   "author": "Francis Ayodeji <fsixpro@gmail.com>",
